--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.5",
         "laravel/tinker": "^1.0",
-        "lcobucci/jwt": "3.3.3"
+        "lcobucci/jwt": "3.3.3",
+        "phpoffice/phpword": "^0.18.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
